Config para usar gtfs estáticos locales

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,5 @@ GTFS_STATIC_REFRESH_RATE=14400000 # 4 hours
 GTFS_RT_CACHE=False
 ## Seconds to refresh the cache on GTFS Realtime data
 GTFS_RT_CACHE_EXPIRE=20 # 20s
+## Disable GTFS Static download and use local files
+GTFS_STATIC_DISABLE_DOWNLOAD=false
